# mkdocs-computePods-plugin

./: .aspell.pws  404.html  README.md  Readme.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
docs/: README.md
mkdocs_computePods_plugin/: __init__.py  computePods.py
search/: search_index.json
